src/tm/jobs.h
@@ -338,9 +338,7 @@ public:
     explicit ScanJobFeedingBack(const QString& filePath,
                                 const QString& dbName)
         : QObject(), ScanJob(filePath, dbName)
-    {
-        setAutoDelete(false);
-    }
+    {}
 
 protected:
     void run() override
